--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -2,7 +2,15 @@
 	display: flex;
 	justify-content: space-around;
 	width: 60vw;
-	
 	padding: 1em;
 	margin-bottom: 1em;
+}
+@media (max-width: 768px) and (max-width: 1024px) {
+	.directory-menu {
+		display: flex;
+		justify-content: space-around;
+		width: 288px;
+		padding: 0em;
+		margin-bottom: 1em;
+	}
 }
